tests/semanticDiff-same-topologies-illegal-podlist/old1.yaml
# UI -> Command
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ui-to-command
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: account-command-selector
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: bank-ui-selector
---
# Query to UI
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: query-to-ui
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: account-query-selector
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: bank-ui-selector
      ports:
        - port: 8080
          protocol: TCP
